Added Woed Case studies

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-text">
-            <h2>UX/UI Case & Frontend Designer</h2>
+            <h2>UX/UI Case Studies & Frontend Designer</h2>
             <p>I create clean, user-friendly, and responsive digital experiences.</p>
             <a href="#portfolio" class="btn">View My Work</a>
         </div>
@@ -74,7 +74,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio-section">
         <div class="container">
-            <h2>Projects</h2>
+            <h2>UX/UI Case Studies</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-link="https://embed.figma.com/proto/wevdExIxjgVDdpGN8cJpnr/Ride-sharing?node-id=114-84&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&embed-host=share">
                     <img src="images/rideshare.png" alt="Ridesharing app">
@@ -92,6 +92,14 @@
                     <p class="project-description">Simple, secure banking designed to make money management easy.</p>
                 </div>
             </div>
+            <!-- <div class="senior-project-section">
+                <h2>Website</h2>
+                <div class="senior-project" data-link="https://embed.figma.com/proto/wevdExIxjgVDdpGN8cJpnr/Ride-sharing?node-id=114-84&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&embed-host=share">
+                    <img src="images/homepage.png" alt="Ridesharing app">
+                    <h3>BYU-I Research Project</h3>
+                    <p class="project-description">BYU-I has no </p>
+                </div>
+            </div> -->
         </div>
     </section>
 
