Deleted word "Case Studies"

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-text">
-            <h2>UX/UI Case Studies & Frontend Designer</h2>
+            <h2>UX/UI & Frontend Designer</h2>
             <p>I create clean, user-friendly, and responsive digital experiences.</p>
             <a href="#portfolio" class="btn">View My Work</a>
         </div>
